# File-Structure-for-CLI-Calculator

./: .gitignore  README.md
examples/: input.txt  output.txt
include/: calculator.h  parser.h
scripts/: calculator.go  calculator.py
src/: calculator.cpp  main.cpp  parser.cpp
tests/: CMakeLists.txt  test_calculator.cpp  test_parser.cpp
